Setting up for 3 & 4

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -271,7 +271,7 @@ Custom inline tests
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-Let's implement a custom *inline test* that calculates the confusion matrix for a binary classification model.
+Let's implement a custom *inline test* that calculates the confusion matrix for a binary classification model:
 
 - An inline test refers to a test written and executed within the same environment as the code being tested — in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework.
 - You'll note that the custom test function is just a regular Python function that can include and require any Python library as you see fit.
