--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -28,21 +28,21 @@ skip_preview: true
 
 # Learning objectives {.center}
 
-_"As a **developer** who has logged tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's documentation, submit my model documentation for approval, and track changes and other updates to my model."_
+_"As a **validator** who has logged validation tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's validation report, submit my validation report for approval, and track finding resolution and other updates to my model."_
 
 ::: {.tc}
 <br>
 This final module is part of a four-part series:
 <br><br>
-[Validator Fundamentals](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button target="_blank"}
+[Validator Fundamentals](/training/validator-fundamentals/validator-fundamentals-register.qmd){.button target="_blank"}
 :::
 
 
 ## Module 4 — Contents {.center}
 
 ::: {.f2}
-1. [Refine model documentation](#refine-model-documentation)
-3. [Submit documentation for approval](#submit-documentation-for-approval)
+1. [Refine validation report](#refine-validation-report)
+3. [Submit validation report for approval](#submit-report-for-approval)
 4. [Collaborate with others](#collaborate-with-others)
 5. [Track model activity](#track-model-activity)
 
@@ -65,20 +65,20 @@ To continue, you need to have been [onboarded](developer-fundamentals-register.q
 :::: {.columns}
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 1](using-validmind-for-model-development.html){.button target="_blank"}
+[Module 1](using-validmind-for-model-validation.html){.button target="_blank"}
 :::
 
 :::
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 2](learning-to-run-tests.html){.button target="_blank"}
+[Module 2](running-data-quality-tests.html){.button target="_blank"}
 :::
 
 :::
 
 ::: {.column width="30%"}
 ::: {.tc}
-[Module 3](implementing-custom-tests.html){.button target="_blank"}
+[Module 3](developing-challenger-models.html){.button target="_blank"}
 :::
 
 :::
@@ -111,7 +111,7 @@ Be sure to return to this page afterwards.
 
 :::
 
-# Refine model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Refine validation report {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
@@ -235,7 +235,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Submit documentation for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Submit report for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
