--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -242,7 +242,7 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 With your code snippet copied to your clipboard:
 
 1. Open **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
-2. Run the cell in the following Setting up section: **Initialize the {{< var validmind.developer >}}**
+2. Run the cell under the **Setting up** section.
 
 :::
 
@@ -261,7 +261,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 After you've successfully initialized the {{< var validmind.developer >}}, let's import the sample dataset that was used to develop the dummy champion model:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
-2. Run the cell in the following section: **Load the sample dataset**
+2. Run the cell under the **Load the sample dataset** section.
 
 :::
 
@@ -495,7 +495,8 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 So far, we've rebalanced our raw dataset and used the results of {{< var vm.product >}} tests to additionally remove highly correlated features from our dataset. Next, let's now spilt our dataset into train and test in preparation for model evaluation testing:
 
 1. Continue with **2 — Start the model validation process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/2-start_validation_process.ipynb){target="_blank"}
-2. Run all the cells under the following section: **Split the preprocessed dataset**.
+2. Run all the cells under the **Split the preprocessed dataset** section.
+
 :::
 
 When you're done, return to this page and click [{{< fa chevron-right >}}]() to continue.
