Editing text blocks callout

--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -82,6 +82,10 @@ To make a copy of an existing text block in your block library:
 
 ## Edit text blocks
 
+::: {.callout title="Editing a text block within the block library will not update inserted instances of that block."}
+Previously inserted instances of text blocks within model documentation, validation reports, or ongoing monitoring reports will not be updated.
+:::
+
 To modify an existing text block in your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
