--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -57,7 +57,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
    To preview what is included in a metric, click on it. By default, the actively selected metric is previewed.
 
-8. Click **Insert # Metrics(s) Over Time to Document** when you are ready.
+8. Click **Insert # Metric(s) Over Time to Document** when you are ready.
 
 9. After inserting the metrics into your document, review the data to confirm that it is accurate and relevant.
 
