Editing lead-in

--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -3,7 +3,7 @@ title: "Manage text block library"
 date: last-modified
 ---
 
-Build a library of reusable text blocks to insert into your documentation templates. Reusable text blocks can be private, visible only to the user, or shared, accessible across your organization.
+Build a library of reusable text blocks to insert into your model documentation, validation reports, and ongoing monitoring reports. Reusable text blocks can be private, visible only to the user, or shared, accessible across your organization.
 
 ::: {.callout}
 ## By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able to add, edit, or delete shared text blocks.
